# AuthBarn

./: .gitignore  LICENSE  READme.md  READme.txt  authbarn.py  config.py  logger.py  pyproject.toml  setup.py
authbarn/: .env  LICENSE  __init__.py  authbarn.py  config.py  database.db  gen_secret_key.py  logger.py  pyproject.toml  test.py
authbarn/data/: permission.json  userdata.db  userdata.json
data/: permission.json  userdata.json
