[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AuthBarn"
version = "0.1.1"
authors = [
    { name="Darell Barnes", email="your_email@example.com" }
]
description = "User authentication and role-based management."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
dependencies = []